2012-02-09  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2012-01-05  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/51767
	* cfgrtl.c (force_nonfallthru_and_redirect): Force addition
	of jump_block and add an extra edge for degenerated asm gotos.

	PR middle-end/51768
	* stmt.c (check_unique_operand_names): Don't ICE during error
	reporting if i is from labels chain.

	PR middle-end/44777
	* profile.c (branch_prob): Split bbs that have exit edge
	and need a fake entry edge too.

2012-02-09  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline 
	2012-02-09  Peter Bergner  <bergner@vnet.ibm.com>

	PR middle-end/52140
	* dojump.c (do_compare_rtx_and_jump): Use SCALAR_FLOAT_MODE_P.

2012-02-09  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline 
	2012-01-20  Andrey Belevantsev  <abel@ispras.ru>

	PR target/51106
	* function.c (instantiate_virtual_regs_in_insn): Use
	delete_insn_and_edges when removing a wrong asm insn.

2012-02-07  Quentin Neill  <quentin.neill@amd.com>

	Backport from mainline:
	2012-01-19  Quentin Neill  <quentin.neill@amd.com>

	PR target/48743
	* config/i386/driver-i386.c (host_detect_local_cpu): Also check
	family to distinguish PROCESSOR_ATHLON.

2012-02-07  Kai Tietz  <ktietz@redhat.com>
            Dave Korn  <dave.korn.cygwin@gmail.com>

	PR target/40068
	* config/i386/winnt-cxx.c (i386_pe_adjust_class_at_definition):
	Take care that typinfo gets dllexport-attribute.

2012-01-31  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	Backport from mainline:
	2012-01-31  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	config/arm/thumb2.md (thumb2_mov_notscc): Use MVN for true
	condition.

2012-01-20  Eric Botcazou  <ebotcazou@adacore.com>

	* cfgrtl.c (rtl_dump_bb): Do not dump insns for {ENTRY|EXIT}_BLOCK.

2012-01-15  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/51821
	* recog.c (peep2_find_free_register): Determine clobbered registers
	from insn pattern.
